--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Aresn",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": ">=0.18.1",
     "clipboard": "^1.7.1",
     "highlightjs": "^8.7.0",
     "ityped": "0.0.6",
@@ -52,7 +52,7 @@
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.11.0",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^3.0.0"
   }
 }
